--- a/Jupyter Exercises/Numpy.ipynb
+++ b/Jupyter Exercises/Numpy.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "e102afa7",
    "metadata": {},
    "outputs": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "e2e30a61",
    "metadata": {},
    "outputs": [
@@ -55,7 +55,7 @@
      "output_type": "stream",
      "text": [
       "<class 'tuple'>\n",
-      "(4,)\n",
+      "(3,)\n",
       "Shape of the array: (2, 3)\n",
       "[[1 2 3]\n",
       " [4 5 6]]\n"
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "id": "7adf2918",
    "metadata": {},
    "outputs": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "2ee2175a",
    "metadata": {},
    "outputs": [
@@ -117,7 +117,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shape of this array is:  (3, 3)\n"
+      "Shape of this array is: (3, 3)\n"
      ]
     }
    ],
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "1d166140",
    "metadata": {},
    "outputs": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "id": "553171c0",
    "metadata": {},
    "outputs": [
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "id": "e2293b31",
    "metadata": {},
    "outputs": [
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "id": "2b0ab76b",
    "metadata": {},
    "outputs": [
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "id": "f81660e6",
    "metadata": {},
    "outputs": [
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "id": "8feb671a",
    "metadata": {},
    "outputs": [
@@ -407,11 +407,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.69388803 0.43459109 0.95679906 0.90415641 0.55813781]\n",
-      " [0.32745411 0.20352935 0.08898136 0.17761109 0.1603336 ]\n",
-      " [0.46054914 0.93561055 0.83772828 0.88674495 0.0495275 ]\n",
-      " [0.80420444 0.74649425 0.4199305  0.16697614 0.06411974]\n",
-      " [0.35098443 0.67965012 0.85275943 0.68997237 0.88733409]]\n"
+      "[[0.69036975 0.67381094 0.79845015 0.88178151 0.14946069]\n",
+      " [0.66403925 0.4761431  0.57277746 0.16841265 0.69809449]\n",
+      " [0.80093426 0.74968378 0.13046163 0.00225661 0.6591661 ]\n",
+      " [0.17156092 0.12416776 0.33414878 0.2158549  0.94266326]\n",
+      " [0.70105385 0.86753374 0.99164417 0.33775052 0.06700756]]\n"
      ]
     }
    ],
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "id": "d919ffb3",
    "metadata": {},
    "outputs": [
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "id": "6088ed98",
    "metadata": {},
    "outputs": [
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "id": "25e2b295",
    "metadata": {},
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "id": "10de7408",
    "metadata": {},
    "outputs": [
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 15,
    "id": "188ab18e",
    "metadata": {},
    "outputs": [
@@ -534,17 +534,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[2011   12   13]\n",
-      " [  21 2022   23]\n",
-      " [  31   32 2033]\n",
-      " [2041   42   43]]\n",
+      "[[11 12 13]\n",
+      " [21 22 23]\n",
+      " [31 32 33]\n",
+      " [41 42 43]]\n",
       "\n",
       "New array:\n",
       "\n",
-      "[[3011   12   13]\n",
-      " [  21 3022   23]\n",
-      " [  31   32 3033]\n",
-      " [3041   42   43]]\n"
+      "[[1011   12   13]\n",
+      " [  21 1022   23]\n",
+      " [  31   32 1033]\n",
+      " [1041   42   43]]\n"
      ]
     }
    ],
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 16,
    "id": "a30e4d30",
    "metadata": {},
    "outputs": [
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 17,
    "id": "2ee04f55",
    "metadata": {},
    "outputs": [
@@ -603,7 +603,8 @@
      "text": [
       "[[False False]\n",
       " [ True  True]\n",
-      " [ True  True]]\n"
+      " [ True  True]]\n",
+      "[21 22 31 32]\n"
      ]
     }
    ],
@@ -618,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 18,
    "id": "f11a4ebf",
    "metadata": {},
    "outputs": [
@@ -645,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 21,
    "id": "659e16b9",
    "metadata": {},
    "outputs": [
@@ -676,9 +677,68 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "da49fb40",
+   "metadata": {},
+   "source": [
+    "# Slicing arrays\n",
+    "To slice an array is useful to isolate a \"subregion\" of the array to a ndarray"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "f0264b3c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[11 12 13 14 15 16]\n",
+      " [21 22 23 24 25 26]\n",
+      " [31 32 33 34 35 36]\n",
+      " [41 42 43 44 45 46]]\n",
+      "\n",
+      "Array sliced:\n",
+      " [[12 13]\n",
+      " [22 23]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# We create a normal array first\n",
+    "to_slice_array = np.array([[11,12,13,14,15,16], [21,22,23,24,25,26], [31,32,33,34,35,36], [41,42,43,44,45,46]])\n",
+    "print(to_slice_array)\n",
+    "#Then we'll slice it into a 2x2 array; first position are rows and second one are columns, last number isn't included\n",
+    "a_slice = to_slice_array[:2, 1:3]\n",
+    "print(\"\\nArray sliced:\\n\",a_slice)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "761066f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Slice: 12\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Let's print the value in row 0 column 0 of the slice; the output will generate a new index\n",
+    "print(\"Slice:\",a_slice[0,0])\n",
+    "# Why 12?, it's because we already sliced this array before, so the first position changed to the number 12."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4bc33b9",
+   "id": "599fd65f",
    "metadata": {},
    "outputs": [],
    "source": []
