Data types in ndarray, operations and set operations

--- a/Jupyter Exercises/Numpy.ipynb
+++ b/Jupyter Exercises/Numpy.ipynb
@@ -757,7 +757,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "f10d0bc6",
+   "id": "8c1718ec",
    "metadata": {},
    "outputs": [
     {
@@ -776,7 +776,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "ae5d7e61",
+   "id": "d1103bfe",
    "metadata": {},
    "outputs": [
     {
@@ -808,7 +808,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29e09096",
+   "id": "94309339",
    "metadata": {},
    "source": [
     "##### Sooo, what if we want a new array from a slice?"
@@ -817,7 +817,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "15cef6da",
+   "id": "3763bef4",
    "metadata": {},
    "outputs": [
     {
@@ -837,7 +837,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "255f805f",
+   "id": "56e20d9a",
    "metadata": {},
    "outputs": [
     {
@@ -855,7 +855,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "789500d9",
+   "id": "c249ffd6",
    "metadata": {},
    "source": [
     "# Data types of arrays in numpy"
@@ -864,7 +864,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "0a92eb60",
+   "id": "eeb0e9c2",
    "metadata": {},
    "outputs": [
     {
@@ -884,7 +884,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "2c191e9f",
+   "id": "2759895f",
    "metadata": {},
    "outputs": [
     {
@@ -904,7 +904,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "3e3de821",
+   "id": "2ab494ef",
    "metadata": {},
    "outputs": [
     {
@@ -929,7 +929,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ee9358c",
+   "id": "d35e347a",
    "metadata": {},
    "source": [
     "# Arithmetic operations"
@@ -938,7 +938,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "728ec5f4",
+   "id": "ef2c7b03",
    "metadata": {},
    "outputs": [
     {
@@ -964,7 +964,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "9f322574",
+   "id": "e6676de4",
    "metadata": {},
    "outputs": [
     {
@@ -988,7 +988,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "da6060d4",
+   "id": "049517e6",
    "metadata": {},
    "outputs": [
     {
@@ -1012,7 +1012,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "e2827fc4",
+   "id": "536c9b3d",
    "metadata": {},
    "outputs": [
     {
@@ -1036,7 +1036,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "8fa29ec2",
+   "id": "3fb2ed1e",
    "metadata": {},
    "outputs": [
     {
@@ -1054,9 +1054,265 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "62fa8ac4",
+   "metadata": {},
+   "source": [
+    "\n",
+    "# Statistical basic operations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "dc1821ca",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 14.57262644  12.12352733   9.68873349   0.48765236  -4.63005565]\n",
+      " [  9.13739323 -12.98974293 -11.66566362  18.66171838   7.49352105]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Generate a random array\n",
+    "arr = 10 * np.random.randn(2,5)\n",
+    "print(arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "b137d112",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.287971006846339\n"
+     ]
+    }
+   ],
+   "source": [
+    "# This method (\"mean()\") calculates the mean of all the array\n",
+    "print(arr.mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "0068e5c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6.44849679 2.12744522]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "You can pass as a parameter the axis to this method\n",
+    "Axis 0 for columns\n",
+    "Axis 1 for rows\n",
+    "Since there are 2 rows, we'll get two means in this case as printed\n",
+    "\"\"\"\n",
+    "print(arr.mean(axis = 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "d10e9bc4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[11.85500983 -0.4331078  -0.98846507  9.57468537  1.4317327 ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculate the mean but row by row (there are 5 rows)\n",
+    "print(arr.mean(axis = 0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "6bda30d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.70059527 -0.1537115  -2.27865512 -0.31510604 -1.96388467 -0.10322513\n",
+      "  0.81066084 -0.47928936 -0.57206858  0.97960628]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# We'll create an array of 10 random elements\n",
+    "unordered = np.random.randn(10)\n",
+    "print(unordered)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "75d4a9c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-2.27865512 -1.96388467 -0.57206858 -0.47928936 -0.31510604 -0.1537115\n",
+      " -0.10322513  0.70059527  0.81066084  0.97960628]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Let's copy it\n",
+    "ordered = np.array(unordered)\n",
+    "\n",
+    "# And we'll order it by asc\n",
+    "ordered.sort()\n",
+    "print(ordered)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "ab1bf149",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# We can also look for unique elements inside the array; it's good to have a general view of what's inside of an array\n",
+    "array = np.array([1,2,1,4,3,4,6,2,5])\n",
+    "print(np.unique(array))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "d39e157b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['desktop' 'chair' 'table']\n",
+      "['desktop' 'chair' 'lamp']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# SET OPERATIONS\n",
+    "s1 = np.array([\"desktop\",\"chair\",\"table\"])\n",
+    "s2 = np.array([\"desktop\",\"chair\",\"lamp\"])\n",
+    "print(s1)\n",
+    "print(s2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "59453d3d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['chair' 'desktop']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Intersection (common elements between both sets) with method \"intersect1d()\"\n",
+    "print(np.intersect1d(s1, s2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "83371182",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['chair' 'desktop' 'lamp' 'table']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Union in 1d, you won't get more than one sample of each element\n",
+    "print(np.union1d(s1, s2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "37675954",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['table']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Difference, elements of s1 that aren't in s2 with the method \"setdiff1d()\"\n",
+    "print(np.setdiff1d(s1, s2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "9a4a4638",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ True  True False]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Which elements of s1 are in s2 with method \"in1d()\", it will return a boolean array\n",
+    "print(np.in1d(s1, s2))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc435aa4",
+   "id": "89209def",
    "metadata": {},
    "outputs": [],
    "source": []
