Start learning how to process images with Python

--- a/Jupyter Exercises/Numpy.ipynb
+++ b/Jupyter Exercises/Numpy.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "e102afa7",
    "metadata": {},
    "outputs": [
@@ -1212,7 +1212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
    "id": "d39e157b",
    "metadata": {},
    "outputs": [
@@ -1456,20 +1456,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 8,
    "id": "4188c345",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.10075992, 0.00244835, 0.59844939, 0.68518525],\n",
-       "       [0.70520163, 0.3730094 , 0.26533947, 0.60004912],\n",
-       "       [0.58524006, 0.10507588, 0.52099084, 0.03367376],\n",
-       "       [0.07839485, 0.32622327, 0.71967786, 0.45084697]])"
+       "array([[0.73470879, 0.65019905, 0.09200883, 0.55437296],\n",
+       "       [0.84096359, 0.20625232, 0.31948526, 0.09754923],\n",
+       "       [0.34452299, 0.690013  , 0.83695445, 0.26748534],\n",
+       "       [0.40924823, 0.82897314, 0.74839567, 0.79343069]])"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1482,22 +1482,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 7,
    "id": "60540461",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[  -1,   -1, 1000, 1000],\n",
-       "       [1000,   -1,   -1, 1000],\n",
-       "       [1000,   -1, 1000,   -1],\n",
-       "       [  -1,   -1, 1000,   -1]])"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'mat' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[7], line 6\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;124;03mWith the method \"where()\" you can pass an array with a conditional expression, where the expression\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;124;03mreturns True it replaces it with the 2nd argument (1000) and where it returns False it changes it to\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;124;03mthe 3rd argument (-1).\u001b[39;00m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m----> 6\u001b[0m np\u001b[38;5;241m.\u001b[39mwhere(mat \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0.5\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m0\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'mat' is not defined"
+     ]
     }
    ],
    "source": [
@@ -1887,7 +1885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 9,
    "id": "891e1270",
    "metadata": {},
    "outputs": [
@@ -1914,7 +1912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 10,
    "id": "9093d2f8",
    "metadata": {},
    "outputs": [
@@ -1922,7 +1920,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time taken by numpy ndarray: 0.253074 seconds\n"
+      "Time taken by numpy ndarray: 0.420279 seconds\n"
      ]
     }
    ],
@@ -1935,7 +1933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 11,
    "id": "3540efb5",
    "metadata": {},
    "outputs": [
@@ -1956,7 +1954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 12,
    "id": "68527111",
    "metadata": {},
    "outputs": [
@@ -1967,7 +1965,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[72], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m timer_list \u001b[38;5;241m=\u001b[39m Timer(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msum(a_list)\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfrom __main__ import a_list\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTime taken by list:  \u001b[39m\u001b[38;5;132;01m%f\u001b[39;00m\u001b[38;5;124m seconds\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m%\u001b[39m (timer_list\u001b[38;5;241m.\u001b[39mtimeit(timeits)))\n",
+      "Cell \u001b[1;32mIn[12], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m timer_list \u001b[38;5;241m=\u001b[39m Timer(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msum(a_list)\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfrom __main__ import a_list\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTime taken by list:  \u001b[39m\u001b[38;5;132;01m%f\u001b[39;00m\u001b[38;5;124m seconds\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m%\u001b[39m (timer_list\u001b[38;5;241m.\u001b[39mtimeit(timeits)))\n",
       "File \u001b[1;32mC:\\Anaconda\\Lib\\timeit.py:178\u001b[0m, in \u001b[0;36mTimer.timeit\u001b[1;34m(self, number)\u001b[0m\n\u001b[0;32m    176\u001b[0m gc\u001b[38;5;241m.\u001b[39mdisable()\n\u001b[0;32m    177\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m--> 178\u001b[0m     timing \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39minner(it, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtimer)\n\u001b[0;32m    179\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[0;32m    180\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m gcold:\n",
       "File \u001b[1;32m<timeit-src>:7\u001b[0m, in \u001b[0;36minner\u001b[1;34m(_it, _timer)\u001b[0m\n",
       "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
